--- a/Education.css
+++ b/Education.css
@@ -46,25 +46,25 @@ body{
   }
  
 
-  #Section1{
+ /* #Section1{
     padding: 7% 0 3%;
-  }
+  }*/
 
-  .Programming{
+  /*.Programming{
     width: 100%;
     height: 100%;
-  }
+  }*/
 
-  .Coding{
+  /*.Coding{
     padding-top:3%;
     text-align: center;
-  }
+  }*/
   
-  .competitive_icon li{
+  /*.competitive_icon li{
     margin:0 2% 0;
     list-style:none;
     display: inline; 
-  }
+  }*/
 
   .fab{
     color:#2ec866;
